fix: our technologies overflow fix

--- a/styles/slider.css
+++ b/styles/slider.css
@@ -78,6 +78,9 @@
     .slider {
         display: flex;
         transition: transform 0.5s ease-in-out;
+        width: auto;
+        overflow-x: unset;
+        margin: 0;
     }
 
     .slide {
